:bug: fix overflow not beeing hidden

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
 }
 
 body {
@@ -11,4 +12,20 @@ body {
     url(https://www.transparenttextures.com/patterns/swirl.png);
   font-size: 1vmin;
   overflow: hidden;
+}
+
+* {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+input, textarea /*.contenteditable?*/ {
+  -webkit-touch-callout: default;
+  -webkit-user-select: text;
+  -moz-user-select: text;
+  -ms-user-select: text;
+  user-select: text;
 }
